# onset-http-plugin

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindHorizonPluginSDK.cmake
src/: CMakeLists.txt  Plugin.cpp  Plugin.hpp  PluginInterface.cpp  Singleton.hpp  version.hpp.in
